[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hydroflow"
version = "1.0"
authors = [{name = "Ruby J. Wright", email = "ruby.wright@helsinki.fi"}]
dependencies = ['numpy','pandas','scipy','astropy','h5py']
description = "A python package to analyse gas flows in cosmological simulations." 
readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools]
py-modules = ["run","src_physics",'src_sims']